samples/_failures_safe/1761334458_f6bbaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4f15b0c.c: In function ‘main’:
./samples/SAFE/__tmp_d4f15b0c.c:187:9: error: expected declaration or statement at end of input
  187 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_d4f15b0c.c:187:9: error: expected declaration or statement at end of input
